--- a/angular.json
+++ b/angular.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": "ce6e8e38-5cfe-42ac-bc16-8c65685a2bf5"
-  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -15,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "memory",
+      "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -30,7 +27,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -98,7 +94,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
